--- a/options.html
+++ b/options.html
@@ -2,87 +2,138 @@
 <html>
 <head>
 	<title>Trello Sort Cards by Steps - Options</title>
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 	<style>
 		html, body {
 			margin: 0;
-			background-color: #445160;
-			/*background-color: rgba(68, 81, 96, 0.1);*/
-			font-family: 'Open Sans', Arial, sans-serif;
+			background-color: #f1dfc7;
+			font-family: 'Roboto', Arial, sans-serif;
 		}
 		.main {
-			width: 800px;
-			min-height: 100vh;
+			width: 400px;
 			margin: 0 auto;
 			padding: 0;
-			background-color: #fff;
-			color: #797979;
 		}
 		.main header {
 			padding: 50px;
 			text-align: center;
-			/*background-color: #57a0d9;*/
-			/*background-color: rgba(87, 160, 217, 0.1);*/
 		}
 		.main header h1 {
+	    display: inline-block;
+	    position: relative;
 			margin: 0;
-			color: #57a0d9;
-			font-family: 'Open Sans', Arial, sans-serif;
-			font-weight: 600;
-		    font-size: 30px;
-		    letter-spacing: 3px;
-		    text-transform: uppercase;
+			padding: 3px 15px;
+			color: #fff;
+	    background-color: #ff7373;
+    	font-size: 40px;
+    	font-weight: 300;
+			font-family: 'Roboto', Arial, sans-serif;
+		  letter-spacing: 3px;
 		}
-		.main header h2 {
-			margin-bottom: 0;
-			color: rgba(0, 0, 0, 0.4);
-			font-family: 'Open Sans', Arial, sans-serif;
-			font-size: 20px;
-			font-weight: 600;
-			letter-spacing: 10px;
-			text-transform: uppercase;
-		}
-		.main .content {
-			padding: 20px 50px;
+		.content {
+			margin-bottom: 150px;
 		}
 		.table-wrapper {
-			padding: 20px;
-			border: 2px solid #ddd;
+			padding: 10px 0;
+			background-color: #fff;
 		}
-		.table-steps {
+		#steps-list {
 			width: 100%;
-
+			margin: 0;
+			padding: 0;
+			list-style: none;
 			border-collapse: collapse;
 			-webkit-box-sizing: border-box;
 			-moz-box-sizing: border-box;
 			box-sizing: border-box;
 		}
-		.table-steps td {
-		    padding: 10px;
+		#steps-list li {
+	   	position: relative;
+      background-color: #fff;
+			padding: 10px 20px;
 		}
-		.table-steps tr:nth-child(2n+1) > td {
-			background-color: #f9f9f9;
+		#steps-list li.sortable-ghost {
+	    opacity: 0.4;
+   		background-color: #f4e2c9;
 		}
-		.table-steps input {
-		    background: #fff;
-		    border: 2px solid #ddd;
-		    padding: 5px 7px;
-		    font-size: 18px;
-		    line-height: 18px;
-		    -webkit-transition-duration: .2s;
-		    -o-transition-duration: .2s;
-		    transition-duration: .2s;
+		#steps-list li.sortable-ghost input {
+   		background-color: #f4e2c9;
 		}
-		.table-steps input:focus,
-		.table-steps input:active {
-			border: 2px solid #57a0d9;
+		#steps-list input {
+	    width: 300px;
+			border: 0;
+	    border-bottom: 2px solid #ddd;
+	    padding: 5px 0;
+	    font-family: 'Roboto', Arial, sans-serif;
+	    font-size: 18px;
+	    font-weight: 300;
+	    line-height: 20px;
+	    -webkit-transition: border .5s ease-in-out, color .2s ease-in-out;
+	    -o-transition: border .5s ease-in-out, color .2s ease-in-out;
+	    transition: border .5s ease-in-out, color .2s ease-in-out;
+		}
+		#steps-list input:focus,
+		#steps-list input:active {
+			border: 0;
+			border-bottom: 2px solid #ff7373;
+			color: #ff7373;
 			outline: none;
 		}
-
-		.regex-slash {
-			font-size: 18px;
-			font-weight: 600;
-			padding: 0 1px;
+		.drag-handle {
+	    display: inline-block;
+	    width: 15px;
+	    margin-right: 15px;
+	    font-size: 30px;
+	    font-weight: 400;
+	    vertical-align: -1px;
+	    cursor: move;
+  		cursor: -webkit-grabbing;
+		}
+		.drag-line {
+	    display: block;
+	    background: #bbb;
+	    height: 2px;
+	    width: 100%;
+	    margin-bottom: 4px;
+		}
+		.drag-line:last-child {
+			margin-bottom: 0;
+		}
+		.delete-step {
+	    display: block;
+	    cursor: pointer;
+	    color: #ff7373;
+	    top: 6px;
+	    right: 18px;
+	    font-size: 30px;
+	    font-weight: 400;
+	    position: absolute;
+	    font-style: normal;
+	    opacity: 0;
+	    -webkit-transition-duration: .2s;
+	    -o-transition-duration: .2s;
+	    transition-duration: .2s;
+		}
+		#steps-list li:hover .delete-step {
+			opacity: 1;
+		}
+		.add-step {
+			width: 100%;
+			padding: 10px;
+			font-family: 'Roboto', Arial, sans-serif;
+			font-size: 20px;
+			color: #fff;
+			background-color: #5f9edf;
+			border: 0;
+			outline: 0;
+			cursor: pointer;
+			opacity: .7;
+			-webkit-transition-duration: .2s;
+	    -o-transition-duration: .2s;
+	    transition-duration: .2s;
+		}
+		.add-step:hover{
+			opacity: 1;
 		}
 	</style>
 </head>
@@ -90,33 +141,19 @@
 
 	<div class="main">
 		<header>
-			<h1>Trello Sort cards by Steps</h1>
-			<h2>Options</h2>
+			<h1>Edit Steps</h1>
 		</header>
 		<div class="content">
-			<h3>Edit Steps</h3>
-			<h4>
-				Here are the steps selected by the extension. You can :
-				<ul>
-					<li>Edit a step name : The name defines which Trello lists will be selected</li>
-					<li>Reorder steps : The order defines which step will appear first when you click on "order cards by steps"</li>
-					<li>Add a new step</li>
-					<li>Delete a step</li>
-				</ul>
-			</h4>
 			<div class="table-wrapper">
-				<table class="table-steps">
-				</table>
+				<ul id="steps-list">
+				</ul>
 			</div>
-
 			<button class="add-step">Add Step</button>
-
-			<div class="status"></div>
-			<button class="get-steps">Afficher Data</button>
 		</div>
 	</div>
 
-	<script src="jquery-1.11.3.min.js"></script>
-	<script src="options.js"></script>
+	<script src="js/jquery-1.11.3.min.js"></script>
+	<script src="js/sortable.min.js"></script>
+	<script src="js/options.js"></script>
 </body>
 </html>
