--- a/options.html
+++ b/options.html
@@ -141,14 +141,14 @@
 
 	<div class="main">
 		<header>
-			<h1>Edit Steps</h1>
+			<h1>Edit Tags</h1>
 		</header>
 		<div class="content">
 			<div class="table-wrapper">
 				<ul id="steps-list">
 				</ul>
 			</div>
-			<button class="add-step">Add Step</button>
+			<button class="add-step">Add Tag</button>
 		</div>
 	</div>
 
